# control_tasks_system

./: CMakeLists.txt  README.md  build_project.bat
src/application/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/application/changeDataBD/: CMakeLists.txt  ChangeDataBD.cpp  ChangeDataBD.h  your_database.db
src/application/changeDataBD/sqlite/: CMakeLists.txt
src/application/changeDataDialog/: CMakeLists.txt  ChangeDataDialog.cpp  ChangeDataDialog.h  ChangeDataDialog.ui
src/application/changeDataDialog/addEmployeeDialog/: AddEmployeeDialog.cpp  AddEmployeeDialog.h  AddEmployeeDialog.ui  CMakeLists.txt
src/application/changeDataWidget/: CMakeLists.txt  ChangeDataWidget.cpp  ChangeDataWidget.h  ChangeDataWidget.ui
src/application/loginDialog/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
src/application/loginWidget/: CMakeLists.txt  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui
